--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -462,6 +462,7 @@
 
     <!-- Camera Preferences Scene Mode dialog box entries -->
     <string-array name="pref_camera_scenemode_entries" translatable="false">
+        <item>@string/pref_camera_scenemode_entry_asd</item>
         <item>@string/pref_camera_scenemode_entry_auto</item>
         <item>@string/pref_camera_scenemode_entry_hdr</item>
         <item>@string/pref_camera_scenemode_entry_refocus</item>
@@ -517,6 +518,7 @@
     </string-array>
 
     <array name="scenemode_thumbnails" translatable="false">
+        <item>@drawable/ic_scene_mode_smartauto</item>
         <item>@drawable/ic_scene_mode_auto</item>
         <item>@drawable/ic_scene_mode_hdr</item>
         <item>@drawable/ic_scene_mode_refocus</item>
@@ -589,6 +591,7 @@
 
     <string-array name="pref_camera_scenemode_entryvalues" translatable="false">
         <item>auto</item>
+        <item>asd</item>
         <item>hdr</item>
         <item>@string/pref_camera_advanced_feature_value_refocus_on</item>
         <item>action</item>
