--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -149,5 +149,5 @@
 
     <!-- Max brightness -->
     <string name="pref_camera_max_brightness_title">Bright screen</string>
-    <string name="pref_camera_max_brightness_default" translatable="false">off</string>
+    <string name="pref_camera_max_brightness_default" translatable="false">on</string>
 </resources>
