--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -145,7 +145,7 @@
 
     <!-- Power shutter -->
     <string name="pref_camera_power_shutter_title">Power shutter</string>
-    <string name="pref_camera_power_shutter_default" translatable="false">off</string>
+    <string name="pref_camera_power_shutter_default" translatable="false">on</string>
 
     <!-- Max brightness -->
     <string name="pref_camera_max_brightness_title">Bright screen</string>
