--- a/res/values/qcomstrings.xml
+++ b/res/values/qcomstrings.xml
@@ -287,7 +287,7 @@
     <string name="pref_camera_facedetection_entry_on">On</string>
 
      <!-- Default redeye reduction setting. -->
-     <string name="pref_camera_redeyereduction_default" translatable="false">disable</string>
+     <string name="pref_camera_redeyereduction_default" translatable="false">enable</string>
 
      <!-- Settings screen, Select Redeye Reduction -->
      <string name="pref_camera_redeyereduction_title">Red-eye reduction</string>
