--- a/res/values/qcomstrings.xml
+++ b/res/values/qcomstrings.xml
@@ -93,7 +93,7 @@
     <string name="pref_camera_video_duration_default" translatable="false">10</string>
 
     <!-- Default Skin Tone Enhancement setting. Do not translate. -->
-    <string name="pref_camera_skinToneEnhancement_default">disable</string>
+    <string name="pref_camera_skinToneEnhancement_default">off</string>
 
     <!-- Settings screen, Select Skin Tone Enhancement title -->
     <string name="pref_camera_skinToneEnhancement_title">Skin Tone Enhancement</string>
@@ -103,8 +103,8 @@
     <string name="pref_camera_skinToneEnhancement_entry_disable">Off</string>
 
     <!-- Skin Tone Enhancement entry values. Do not translate. -->
-    <string name="pref_camera_skinToneEnhancement_value_enable">enable</string>
-    <string name="pref_camera_skinToneEnhancement_value_disable">disable</string>
+    <string name="pref_camera_skinToneEnhancement_value_enable">on</string>
+    <string name="pref_camera_skinToneEnhancement_value_disable">off</string>
     <!-- Settings screen, setting title text for ZSL-->
     <string name="pref_camera_zsl_title">Zero shutter lag</string>
 
@@ -469,7 +469,7 @@
 
     <!-- Select IS title -->
     <string name="pref_camera_dis_title">IS</string>
-    <string name="pref_camera_dis_default">disable</string>
+    <string name="pref_camera_dis_default">off</string>
 
     <!-- DIS choices -->
     <string name="pref_camera_dis_entry_off">Off</string>
